--- a/angularJS/assi1/index.html
+++ b/angularJS/assi1/index.html
@@ -4,7 +4,7 @@
     <title>Lunch Checker</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
-    <script src="angular.min.js"></script>
+    <script src="styles/angular.min.js"></script>
     <script src="app.js"></script>
     <style>
       .message { font-size: 1.3em; font-weight: bold; }
