--- a/htmlAssi/assi3/index.html
+++ b/htmlAssi/assi3/index.html
@@ -18,19 +18,20 @@
   </head>
 <body>
 
-  <div class="topnav">
+  <nav class="navbar topnav">
     Food, LLC
 
     <div class="dropdown visible-xs" >
-  <button class="dropbtn">
-    <span class="glyphicon glyphicon-list" aria-hidden="true"></span></button>
+  <button class="dropbtn ">
+    <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+  </button>
   <div class="dropdown-content">
     <a href="#sec1">Chicken</a>
     <a href="#sec2">Beef</a>
     <a href="#sec3">Sushi</a>
   </div>
 </div>
-  </div>
+</nav>
 
   <h1>Our Menu</h1>
 
